tests/negative/struct_errors/unknown_field_access.nano
# Expected error: Struct 'Point' has no field 'z'
# Hint: Available fields: x y

struct Point {
    x: int
    y: int
}

fn get_z(p: Point) -> int {
    return p.z
}

shadow get_z {
    let p: Point = Point { x: 1, y: 2 }
    assert (== (get_z p) 0)
}

fn main() -> int {
    return 0
}

shadow main {
    assert (== (main) 0)
}
